BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Alignment_Config__c.object
<CustomObject>
    <description>This object will store config entries which will control which profile and permission set gets assigned to a user on basis of Field force types as well as Assignment Roles</description>
    <fields>
        <fullName>Alignment_Id_BMS_SHARED__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Alignment Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Applicable_to_BMS_SHARED__c</fullName>
        <label>Applicable to</label>
        <picklist>
            <picklistValues>
                <fullName>ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRKT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_Role_Code_BMS_SHARED__c</fullName>
        <label>Assignment Role Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Cd_BMS_SHARED__c</fullName>
        <label>Business Unit Cd</label>
        <picklist>
            <picklistValues>
                <fullName>MED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_BMS_SHARED__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District_BMS_SHARED__c</fullName>
        <label>District</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Force_Type_Code_BMS_SHARED__c</fullName>
        <label>Field Force Type Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language_BMS_SHARED__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_BMS_SHARED__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>CMPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TERR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Locale_BMS_SHARED__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no_NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da_DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru_RU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it_IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar_SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de_CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi_FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iw_IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tr_TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu_HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv_SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de_AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el_GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs_CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar_AE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permission_Set_BMS_SHARED__c</fullName>
        <label>Permission Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Type_BMS_SHARED__c</fullName>
        <label>Profile Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sampling_Indicator_BMS_SHARED__c</fullName>
        <label>Sampling Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>NSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_BMS_SHARED__c</fullName>
        <label>Territory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone_BMS_SHARED__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>America/Los_Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIME_ZONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Riyadh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Brussels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Paris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jerusalem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa/Johannesburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Helsinki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Istanbul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Moscow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alignment Config</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Alignment Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alignment Configurations</pluralLabel>
    <recordTypes>
        <fullName>AE_Permission_Set_Settings</fullName>
        <active>true</active>
        <description>This record type is used for Approved Email Permission Set Assignment</description>
        <label>AE Permission Set Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>EM_Permission_sets</fullName>
        <active>true</active>
        <description>EM Permission sets</description>
        <label>EM Permission sets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permission_Set_Settings</fullName>
        <active>true</active>
        <description>User this recordtype for Permission Set Assignments</description>
        <label>Permission Set Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Profile_Assignment_Settings</fullName>
        <active>true</active>
        <description>Please use this for defining a profile level setting</description>
        <label>Profile Assignment Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Config_Setting</fullName>
        <active>true</active>
        <description>Use this record type for user config settings</description>
        <label>User Config Setting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>